--- a/index.html
+++ b/index.html
@@ -242,11 +242,14 @@
             <div class="sensitivity-control">
                 <label for="sensitivity">Detection Sensitivity:</label>
                 <input type="range" id="sensitivity" class="sensitivity-slider" 
-                       min="0.1" max="1.0" step="0.1" value="0.4">
+                       min="0.2" max="0.8" step="0.1" value="0.4">
                 <div style="display: flex; justify-content: space-between; font-size: 0.8rem; color: #999;">
                     <span>Low</span>
                     <span>High</span>
                 </div>
+                <p style="font-size: 0.8rem; color: #666; margin-top: 5px;">
+                    Lower = fewer false positives, Higher = more sensitive
+                </p>
             </div>
             
             <div class="volume-indicator">
