--- a/index.html
+++ b/index.html
@@ -240,15 +240,15 @@
             </button>
             
             <div class="sensitivity-control">
-                <label for="sensitivity">Detection Sensitivity:</label>
+                <label for="sensitivity">AI Confidence Threshold:</label>
                 <input type="range" id="sensitivity" class="sensitivity-slider" 
-                       min="0.2" max="0.8" step="0.1" value="0.4">
+                       min="0.3" max="0.9" step="0.1" value="0.6">
                 <div style="display: flex; justify-content: space-between; font-size: 0.8rem; color: #999;">
-                    <span>Low</span>
-                    <span>High</span>
+                    <span>Strict</span>
+                    <span>Relaxed</span>
                 </div>
                 <p style="font-size: 0.8rem; color: #666; margin-top: 5px;">
-                    Lower = fewer false positives, Higher = more sensitive
+                    Lower = AI must be very confident, Higher = more lenient detection
                 </p>
             </div>
             
